<resources>
  <string name="app_name">面试</string>
  <string name="launch_picture_memory">启动测试图片占用内存</string>
  <string name="launch_picture_compress">启动图片压缩</string>
  <string name="launch_standard">启动标准</string>
  <string name="string_standard">我是标准</string>
  <string name="launch_singletop">启动singleTop</string>
  <string name="string_singletop">我是singleTop</string>
  <string name="launch_singleTask">启动singleTask</string>
  <string name="launch_singleTask2">启动singleTask2</string>
  <string name="string_singleTask">我是singleTask</string>
  <string name="launch_singleInstance">启动singleInstance</string>
  <string name="cus_layout">自定义layout</string>
  <string name="string_singleInstance">我是singleInstance</string>
  <string name="string_sampling_rate">采样率压缩</string>
  <string name="string_quality">质量压缩</string>
  <string name="string_origin">原图</string>

  <string name="refreshlistview_arrow">Content Description Arrow</string>
  <string name="refreshlistview_updating">Updating…</string>
  <string name="refreshlistview_release">Release to refresh…</string>
  <string name="refreshlistview_pulldown">Pull down to refresh…</string>
  <string name="refreshlistview_no_update">"No past update"</string>

  <string name="pull_down_has_data">刷新有数据</string>
  <string name="pull_down_has_no_data">刷新无数据</string>
  <string name="pull_up_has_data">上拉加载有更多数据</string>
  <string name="pull_up_has_no_data">上拉加载无更多数据</string>

  <string name="head">这里是HeadView</string>
  <string name="pull_to_refresh">下拉刷新</string>
  <string name="release_to_refresh">释放立即刷新</string>
  <string name="refreshing">正在刷新...</string>
  <string name="refresh_succeed">刷新成功</string>
  <string name="refresh_fail">刷新失败</string>
  <string name="pullup_to_load">上拉加载更多</string>
  <string name="release_to_load">释放立即加载</string>
  <string name="loading">正在加载...</string>
  <string name="load_succeed">加载成功</string>
  <string name="load_fail">加载失败</string>
  <string name="banner">Banner</string>
  <string name="button">Button</string>
  <string name="accessibility_service">无障碍服务测试</string>
</resources>
