<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_show_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_origin_picture"
            style="@style/ButtonStyle"
            android:text="@string/string_origin" />

        <Button
            android:id="@+id/bt_sampling_rate"
            style="@style/ButtonStyle"
            android:text="@string/string_sampling_rate" />

        <Button
            android:id="@+id/bt_quality"
            style="@style/ButtonStyle"
            android:text="@string/string_quality" />
    </LinearLayout>
</ScrollView>